[Feature/main] main/status로 rest api, socket 밑작업 - 진 (#14)
* [layout] main 화면에서 헤더, mycomp

* style(xml): 메인, 지갑 페이지의 리사이클러뷰 아이템 부분

* style(xml): 지갑 페이지의 리사이클러뷰 날짜아이템 구현

* style(xml): 지갑 페이지의 리사이클러뷰 날짜아이템 글꼴 추가, 사이즈 조정

* style(xml): 지갑 페이지의 mystatus(상단 자산 관련 컴포) 파이차트 제외하고 구현

* style(xml): 메인 페이지의 탭레이아웃, 뷰페이저 부분 constraint 부분 수정

* feat(xml): 지갑 페이지 margin warning 부분 수정

* feat(xml): 메인 페이지 margin warning 부분 수정

* style(xml): colors 수정한 것 지갑, 메인 xml들에 반영

* style(xml): drawable 파일 이름 수정 및 반영

* style(xml): 메인, 지갑 화면- 보유종목 탭에 어떤 항목도 없을 때의 화면

* feat(xml): 지갑페이지 거래 내역 탭 부분 추가

* feat(xml): 캘린더페이지에서 캘린더 부분 빈 뷰로 넣고, 표정들 이미지 안 박고 나머지 완

* style(xml): calendar에서 빈 이미지뷰에 표정 추가, 정렬은 (표정+txtview) 묶음이 가운데정렬로.

* style(xml): 메인화면 logo 이미지 이름 logo_main으로 변경

* style(xml): refactoring - drawable에서 배경 색깔 빼고 틀만 유지(보더 색, 보더 round)

* style(xml): 메인-마이컴포, 지갑-mystatus컴포 부분 그림자 구현

* style(xml): refactoring - rename to MainStockFragment, WalletFragment.kt

* style(xml): 메인, 지갑 페이지 리사이클러뷰 프래그먼트들 생성 및 기본 작업

* feat: 모든 layout에서 중첩된 layout 제거, 중복 layout 제거, 리스트 아이템에서 종목명 열글자 이내로 조정

* style(xml): 메인 화면 마이 컴포넌트에서 +버튼에 그림자, 총 자산 금액 부분 wrap up 설정(layout_width: 0으로 설정)

* style(xml): calendar 화면에 toolbar 추가

* style(xml): merge 위해 commit, 의미 없이 공백 하나 삭제

* feat(socket): 뷰 바인딩 작업 후 소켓에서 받아온 데이터 뷰에 적용(메인 스레드에서 하도록)

* feat(main): retrofit2 밑작업, main/status에서 retrofi2 연결 후 rest api로 데이터 받아오기

* refactor(structure): 패키지 구조 수정 및 그에 따른 코드 반영(xml)

* refactor(structure): 패키지 구조 수정 및 그에 따른 코드 반영(kt)

* feat(secret): api key 보안 강화 적용

--- a/app/build.gradle
+++ b/app/build.gradle
@@ -3,11 +3,17 @@ plugins {
     id 'kotlin-android'
 }
 
+Properties properties = new Properties()
+properties.load(project.rootProject.file('local.properties').newDataInputStream())
+
 android {
     compileSdkVersion 30
     buildToolsVersion "30.0.3"
 
     defaultConfig {
+        buildConfigField "String", "SERVER_API_KEY", properties['server_api_key']
+
+
         applicationId "com.etwoitwo.damda"
         minSdkVersion 21
         targetSdkVersion 30
@@ -30,6 +36,10 @@ android {
     kotlinOptions {
         jvmTarget = '1.8'
     }
+    buildFeatures {
+        viewBinding true
+        dataBinding true
+    }
 }
 
 dependencies {
@@ -48,4 +58,8 @@ dependencies {
         // excluding org.json which is provided by Android
         exclude group: 'org.json', module: 'json'
     }
+
+    implementation 'com.squareup.retrofit2:retrofit:2.9.0'
+    implementation 'com.squareup.retrofit2:converter-gson:2.4.0'
+    implementation 'com.google.code.gson:gson:2.8.6'
 }
