--- a/app/build.gradle
+++ b/app/build.gradle
@@ -11,7 +11,8 @@ android {
     buildToolsVersion "30.0.3"
 
     defaultConfig {
-        buildConfigField "String", "SERVER_API_KEY", properties['server_api_key']
+        buildConfigField "String", "MY_SERVER_API_KEY", properties['my_server_api_key']
+        buildConfigField "String", "AWS_SERVER_API_KEY", properties['aws_server_api_key']
 
 
         applicationId "com.etwoitwo.damda"
