--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -15,6 +15,8 @@
         <activity android:name=".feature.sign.SignInActivity" />
         <activity android:name=".feature.sign.SignUpActivity" />
         <activity android:name=".MainActivity">
+        </activity>
+        <activity android:name=".feature.graph.SellingActivity">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
 
