--- a/app/build.gradle
+++ b/app/build.gradle
@@ -59,8 +59,8 @@ dependencies {
     }
 
     implementation 'com.squareup.retrofit2:retrofit:2.9.0'
-    implementation 'com.github.PhilJay:MpAndroidChart:v3.0.2'
 
     implementation 'com.squareup.retrofit2:converter-gson:2.4.0'
     implementation 'com.google.code.gson:gson:2.8.6'
+    implementation 'com.github.PhilJay:MPAndroidChart:v3.1.0'
 }
