feat: 온보딩 스와이프 구현 + 로그인으로 페이지 전환

--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -14,8 +14,10 @@
         android:usesCleartextTraffic="true">
         <activity
             android:name=".feature.common.SplashActivity"
-            android:theme="@style/SplashTheme"
-            android:exported="true">
+            android:exported="true"
+            android:theme="@style/SplashTheme">
+        </activity>
+        <activity android:name=".feature.onboarding.OnBoardingActivity" >
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
 
