--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -16,13 +16,14 @@
             android:name=".feature.common.SplashActivity"
             android:exported="true"
             android:theme="@style/SplashTheme">
+        </activity>
+        <activity android:name=".feature.onboarding.OnBoardingActivity" >
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
 
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
         </activity>
-        <activity android:name=".feature.onboarding.OnBoardingActivity" />
         <activity android:name=".feature.search.SearchListActivity" />
         <activity android:name=".feature.sign.SignInActivity" />
         <activity android:name=".feature.sign.SignUpActivity" />
