fix: 북마크 기능

--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -30,6 +30,7 @@
         <activity android:name=".feature.graph.GraphActivity"/>
         <activity android:name=".feature.graph.BuyingActivity"/>
         <activity android:name=".feature.graph.SellingActivity"/>
+        <activity android:name=".feature.onboarding.CalendarActivity"/>
     </application>
 
 </manifest>
